# HaskellsGameOfLife

./: .gitignore  CHANGELOG.md  blinkers.gol  forty-seven-game-of-life.cabal  stack.yaml
src/: Logic.hs  Main.hs
