cabal-version:       >=1.10
-- Initial package description 'forty-seven-game-of-life.cabal' generated
-- by 'cabal init'.  For further documentation, see
-- http://haskell.org/cabal/users-guide/

name:                forty-seven-game-of-life
version:             0.1.0.0
-- synopsis:
-- description:
-- bug-reports:
license:             Apache-2.0
license-file:        LICENSE
author:              Alejandro Serrano
maintainer:          alejandro.serrano@47deg.com
-- copyright:
category:            Game
build-type:          Simple
extra-source-files:  CHANGELOG.md

executable forty-seven-game-of-life
  main-is:             Main.hs
  other-modules:       Logic
  -- other-extensions:
  build-depends:       base >=4.12 && <5, bytestring, MemoTrie, gloss
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
